--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,16 @@
-<div id="header" class="">
-  <app-navigation></app-navigation>
+<div id="header">
+  <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+    <img id="logo" style="" src="assets/images/hummingbird.png" alt="logo">
+    <span style="" class="navbar-brand">BS Native Girl</span>
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <app-navigation class="links"></app-navigation>
+    <br>
+    <div class="social-icons" style="clear: both;display: inline-block;">
+      <i class="fa fa-facebook"></i>
+      <i class="fa fa-twitter"></i>
+      <i class="fa fa-pintrest"></i>
+    </div>
+  </nav>
 </div>
-
-
