--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,5 @@
-<p>
-  footer works!
-</p>
+<footer>
+  <div class="navbar navbar-toggleable-md navbar-light bg-faded" style="width: 100%;color:black;position: fixed; bottom:0; width: 100%;">
+    <p style="position: relative;color: black;">footer works</p>
+  </div>
+</footer>
