--- a/src/app/header/navigation/navigation.component.html
+++ b/src/app/header/navigation/navigation.component.html
@@ -1,24 +1,25 @@
-<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <a class="navbar-brand" href="#">Navbar</a>
+<div class="collapse navbar-collapse" id="navbarSupportedContent">
+  <ul class="navbar-nav">
+    <li class="nav-item active">
+      <i class="fa fa-home">
+        <a routerLink="/landing" routerLinkActive="active" class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </i>
+    </li>
+  <li class="nav-item active">
+    <i class="fa fa-info">
+      <a routerLink="/about" routerLinkActive="active" class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
+    </i>
+  </li>
+  <li class="nav-item active">
+    <i class="fa fa-picture-o">
+      <a routerLink="/gallery" routerLinkActive="active" class="nav-link" href="#">Gallery <span class="sr-only">(current)</span></a>
+    </i>
+  </li>
+  <li class="nav-item active">
+      <i class="fa fa-envelope">
+        <a routerLink="/contact" routerLinkActive="active" class="nav-link" href="#">Contact <span class="sr-only">(current)</span></a>
+      </i>
+    </li>
+  </ul>
+</div>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
-  </div>
-</nav>
