--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,9 @@
 <footer>
   <div class="navbar navbar-toggleable-md navbar-light bg-faded" style="width: 100%;color:black;position: fixed; bottom:0; width: 100%;">
-    <p style="position: relative;color: black;">footer works</p>
+    <div class="social-icons" style="clear: both;display: inline-block;">
+      <i class="fa fa-facebook"></i>
+      <i class="fa fa-twitter"></i>
+      <i class="fa fa-pinterest"></i>
+    </div>
   </div>
 </footer>
