--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,7 +10,7 @@
     <div class="social-icons" style="clear: both;display: inline-block;">
       <i class="fa fa-facebook"></i>
       <i class="fa fa-twitter"></i>
-      <i class="fa fa-pintrest"></i>
+      <i class="fa fa-pinterest"></i>
     </div>
   </nav>
 </div>
