--- a/src/app/views/gallery/gallery.component.css
+++ b/src/app/views/gallery/gallery.component.css
@@ -1,8 +1,8 @@
-.gallery-products {
+.gallery-catagories {
   margin: 1em auto;
   text-align: center;
 }
-.gallery_product img {
+.gallery-catagory img {
   text-align: center;
   width: 100px;
   height: 100px;
