--- a/src/app/views/gallery/gallery.component.html
+++ b/src/app/views/gallery/gallery.component.html
@@ -1,34 +1,29 @@
-<div class="row gallery-products">
-    <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter hdpe">
-        <img src="http://fakeimg.pl/365x365/" class="img-responsive">
+<div class="jumbotron" style="height: 20em;color: white;background-image: url('assets/images/one.jpg'); background-size: cover;">
+  <h1 class="display-3">BS Native Girl</h1>
+  <div class="pull-right" style="width:50%;">
+
+    <p class="lead">Here are some of my favorite pieces.</p>
+    <hr class="my-4">
+    <p class="lead">
+      <a class="btn btn-primary btn-md" href="#" role="button">Learn more</a>
+    </p>
+  </div>
+</div>
+
+
+<div class="row gallery-catagories">
+    <div class="gallery-catagory col-lg-4 col-md-4 col-sm-4 col-xs-6 filter hdpe">
+        <img src="assets/images/one.jpg" class="img-responsive">
+        Drums
     </div>
 
-    <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter sprinkle">
-        <img src="http://fakeimg.pl/365x365/" class="img-responsive">
-    </div>
+    <div class="gallery-catagory col-lg-4 col-md-4 col-sm-4 col-xs-6 filter sprinkle">
+        <img src="assets/images/wall.jpg" class="img-responsive">
+        Mirrors
+      </div>
 
-    <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter hdpe">
-        <img src="http://fakeimg.pl/365x365/" class="img-responsive">
+    <div class="gallery-catagory col-lg-4 col-md-4 col-sm-4 col-xs-6 filter hdpe">
+      <img src="assets/images/feather-one.jpg" class="img-responsive">
+        Feathers
     </div>
-
-    <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter irrigation">
-        <img src="http://fakeimg.pl/365x365/" class="img-responsive">
-    </div>
-
-    <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter spray">
-        <img src="http://fakeimg.pl/365x365/" class="img-responsive">
-    </div>
-
-    <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter irrigation">
-        <img src="http://fakeimg.pl/365x365/" class="img-responsive">
-    </div>
-
-    <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter spray">
-        <img src="http://fakeimg.pl/365x365/" class="img-responsive">
-    </div>
-
-    <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter irrigation">
-        <img src="http://fakeimg.pl/365x365/" class="img-responsive">
-    </div>
-
 </div>
