--- a/src/app/views/gallery/gallery.component.html
+++ b/src/app/views/gallery/gallery.component.html
@@ -13,17 +13,17 @@
 
 <div class="row gallery-catagories">
     <div class="gallery-catagory col-lg-4 col-md-4 col-sm-4 col-xs-6 filter hdpe">
-        <img src="assets/images/one.jpg" class="img-responsive">
+        <img src="../../assets/images/one.jpg" class="img-responsive">
         Drums
     </div>
 
     <div class="gallery-catagory col-lg-4 col-md-4 col-sm-4 col-xs-6 filter sprinkle">
-        <img src="assets/images/wall.jpg" class="img-responsive">
+        <img src="../../assets/images/wall.jpg" class="img-responsive">
         Mirrors
       </div>
 
     <div class="gallery-catagory col-lg-4 col-md-4 col-sm-4 col-xs-6 filter hdpe">
-      <img src="assets/images/feather-one.jpg" class="img-responsive">
+      <img src="../../assets/images/feather-one.jpg" class="img-responsive">
         Feathers
     </div>
 </div>
