getting pictures to show from /assets/images

--- a/src/app/right-navigation/right-navigation.component.html
+++ b/src/app/right-navigation/right-navigation.component.html
@@ -1,4 +1,4 @@
-<img src="assets/images/feather-2-transparent-background.png" alt="">
+<img src="../../assets/images/feather-2-transparent-background.png" alt="">
 <!-- <ul class="navbar-nav right-nav">
   <li class="nav-item active">
     <a  routerLink="/landing"
