--- a/src/app/views/gallery/gallery.component.html
+++ b/src/app/views/gallery/gallery.component.html
@@ -1,4 +1,4 @@
-<div class="jumbotron" style="height: 20em;color: white;background-image: url('assets/images/one.jpg'); background-size: cover;">
+<div class="jumbotron" style="height: 20em;color: white;background-image: url('../../assets/images/one.jpg'); background-size: cover;">
   <h1 class="display-3">BS Native Girl</h1>
   <div class="pull-right" style="width:50%;">
 
@@ -18,7 +18,7 @@
     </div>
 
     <div class="gallery-catagory col-lg-4 col-md-4 col-sm-4 col-xs-6 filter sprinkle">
-        <img src="../../assets/images/wall.jpg" class="img-responsive">
+        <img src="../../../assets/images/wall.jpg" class="img-responsive">
         Mirrors
       </div>
 
