clean up gallery catagories page

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,8 +8,8 @@
     <app-navigation class="links"></app-navigation>
     <br>
     <div class="social-icons" style="clear: both;display: inline-block;">
-      <i class="fa fa-facebook"></i>
-      <i class="fa fa-twitter"></i>
+      <i class="fa fa-facebook-square"></i>
+      <i class="fa fa-twitter-square"></i>
       <i class="fa fa-pinterest"></i>
     </div>
   </nav>
