--- a/src/app/views/gallery/gallery.component.html
+++ b/src/app/views/gallery/gallery.component.html
@@ -1,11 +1,11 @@
-<div class="jumbotron" style="height: 20em;color: white;background-image: url('../../assets/images/one.jpg'); background-size: cover;">
-  <h1 class="display-3">BS Native Girl</h1>
-  <div class="pull-right" style="width:50%;">
+<div class="jumbotron" style="height: 20em;color: white;background-image: url('assets/images/one.jpg'); background-size: cover;">
+  <h1 style="margin-top: -1em;" class="display-3">BS Native Girl</h1>
+  <div class="float-right">
 
-    <p class="lead">Here are some of my favorite pieces.</p>
+    <p style="width: 40%;float: right;" class="lead">My collection of artwork is broken into catagories.  Here is a jumbotron of the featured images.</p>
     <hr class="my-4">
     <p class="lead">
-      <a class="btn btn-primary btn-md" href="#" role="button">Learn more</a>
+      <a style="position: absolute;bottom: 13em; right: 1em;" class="btn btn-primary btn-md" href="#" role="button">Learn more</a>
     </p>
   </div>
 </div>
