--- a/src/app/header/navigation/navigation.component.html
+++ b/src/app/header/navigation/navigation.component.html
@@ -1,25 +1,24 @@
-<div class="collapse navbar-collapse" id="navbarSupportedContent">
+<div (click)="readRainbow($event)" class="navbar-collapse collapse " id="navbarSupportedContent">
   <ul class="navbar-nav">
     <li class="nav-item active">
       <i class="fa fa-home">
-        <a routerLink="/landing" routerLinkActive="active" class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a routerLink="/landing" routerLinkActive="active" class="nav-link active"><span class="icon-text">Home</span><span class="sr-only">(current)</span></a>
       </i>
     </li>
-  <li class="nav-item active">
+  <li class="nav-item">
     <i class="fa fa-info">
-      <a routerLink="/about" routerLinkActive="active" class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
+      <a routerLink="/about" routerLinkActive="active" class="nav-link"><span class="icon-text">About</span><span class="sr-only">(current)</span></a>
     </i>
   </li>
-  <li class="nav-item active">
+  <li class="nav-item">
     <i class="fa fa-picture-o">
-      <a routerLink="/gallery" routerLinkActive="active" class="nav-link" href="#">Gallery <span class="sr-only">(current)</span></a>
+      <a routerLink="/gallery" routerLinkActive="active" class="nav-link"><span class="icon-text">Gallery</span><span class="sr-only">(current)</span></a>
     </i>
   </li>
-  <li class="nav-item active">
+  <li class="nav-item">
       <i class="fa fa-envelope">
-        <a routerLink="/contact" routerLinkActive="active" class="nav-link" href="#">Contact <span class="sr-only">(current)</span></a>
+        <a routerLink="/contact" routerLinkActive="active" class="nav-link"><span class="icon-text">Contact</span><span class="sr-only">(current)</span></a>
       </i>
     </li>
   </ul>
 </div>
-
