work on mobile navigation menu

--- a/src/app/header/navigation/navigation.component.html
+++ b/src/app/header/navigation/navigation.component.html
@@ -1,4 +1,4 @@
-<div (click)="readRainbow($event)" class="navbar-collapse collapse " id="navbarSupportedContent">
+<div class="navbar-collapse collapse " id="navbarSupportedContent">
   <ul class="navbar-nav">
     <li class="nav-item active">
       <i class="fa fa-home">
