--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,7 +4,7 @@
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <app-navigation class="links"></app-navigation>
+  <app-navigation class="menu"></app-navigation>
   <br>
   <div class="social-icons" style="clear: both;display: inline-block;">
     <i class="fa fa-facebook-square"></i>
