--- a/src/app/header/navigation/navigation.component.html
+++ b/src/app/header/navigation/navigation.component.html
@@ -1,4 +1,4 @@
-<div class="navbar-collapse collapse " id="navbarSupportedContent">
+<div ng-class="{'active': isActive}" ng-click="activeButton()" class="navbar-collapse collapse " id="navbarSupportedContent">
   <ul class="navbar-nav">
     <li class="nav-item active">
       <i class="fa fa-home">
