--- a/src/app/views/contact/contact.component.html
+++ b/src/app/views/contact/contact.component.html
@@ -1,7 +1,7 @@
 <section id="contact">
     <div class="section-content">
       <h1 class="section-header">Get in <span class="content-header wow fadeIn " data-wow-delay="0.2s" data-wow-duration="2s"> Touch with us</span></h1>
-      <h3>Lorem Ipsum is simply dummy text of the printing and typesetting industry</h3>
+      <h4 style="width: 75%;">Brenda would love to hear your comments and interests.  Please email her a message today!</h4>
     </div>
     <div class="contact-section">
     <div class="container">
