--- a/src/app/header/navigation/navigation.component.css
+++ b/src/app/header/navigation/navigation.component.css
@@ -27,16 +27,20 @@ a {
 
 @media (max-width: 1000px) {
 
-  .navbar-collapse {
+:not(.navbar-collapse)   {
 
+}
+:not(.navbar-collapse.collapse) {
 }
 .navbar-collapse.collapse {
 
 }
-
+.active {
+  display: relative;
+}
   .navbar-nav {
     margin-top: 5em;
-    height: 5em;
+    height: 15em;
   }
   .icon-text {
     position: absolute;
