--- a/src/app/views/gallery/gallery.component.css
+++ b/src/app/views/gallery/gallery.component.css
@@ -9,3 +9,23 @@
   margin: 1em 1em 1.5em 1em;
 }
 
+p {
+  width: 40%;float: right;
+}
+@media (max-width: 1000px) {
+   h1 {
+     position: absolute;
+      top: 1em;
+      left: .5em;
+     font-size: 3em;
+   }
+   p {
+    position: absolute;
+    top: 3em;
+    right: 1em;
+    width: 75%;
+    float: right;
+   }
+}
+
+
