--- a/src/app/views/gallery/gallery.component.html
+++ b/src/app/views/gallery/gallery.component.html
@@ -2,10 +2,9 @@
   <h1 style="margin-top: -1em;" class="display-3">BS Native Girl</h1>
   <div class="float-right">
 
-    <p style="width: 40%;float: right;" class="lead">My collection of artwork is broken into catagories.  Here is a jumbotron of the featured images.</p>
-    <hr class="my-4">
+    <p style="" class="lead">My collection of artwork is broken into catagories.  Here is a jumbotron of the featured images.</p>
     <p class="lead">
-      <a style="position: absolute;bottom: 13em; right: 1em;" class="btn btn-primary btn-md" href="#" role="button">Learn more</a>
+      <a style="position: absolute;bottom: -10em; right: 1em;" class="btn btn-primary btn-md" href="#" role="button">Learn more</a>
     </p>
   </div>
 </div>
