--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -21,8 +21,6 @@
 .navbar .menu {
   position: fixed;
   float: right;
-  margin-right: 0;
-  right: .1em;
   margin-right: 1em;
   margin-left: .1em;
   font-size: 1.25em;
@@ -42,8 +40,13 @@
   }
   img {
     position: absolute;
-
   }
+  .navbar .menu {
+    position: absolute;
+    top: -1em;
+    right: 1em;
+  }
+
 
   #logo {
     position: absolute;
