move router view to 85% to keep one page style.

--- a/src/app/views/gallery/gallery.component.html
+++ b/src/app/views/gallery/gallery.component.html
@@ -4,12 +4,12 @@
 
     <p style="" class="lead">My collection of artwork is broken into catagories.  Here is a jumbotron of the featured images.</p>
     <p class="lead">
-      <a style="position: absolute;bottom: -10em; right: 1em;" class="btn btn-primary btn-md" href="#" role="button">Learn more</a>
+      <a style="position: absolute;bottom: 8em; right: 1em;" class="btn btn-primary btn-md" href="#" role="button">Learn more</a>
     </p>
   </div>
 </div>
 
-<div class="row gallery-catagories">
+<div style="margin-bottom: -10em;" class="row gallery-catagories">
     <div class="gallery-catagory col-lg-4 col-md-4 col-sm-4 col-xs-6 filter hdpe">
         <img src="assets/images/one.jpg" class="img-responsive">
         Drums
