--- a/src/app/views/gallery/gallery.component.html
+++ b/src/app/views/gallery/gallery.component.html
@@ -3,8 +3,8 @@
   <div class="float-right">
 
     <p style="" class="lead">My collection of artwork is broken into catagories.  Here is a jumbotron of the featured images.</p>
-    <p class="lead">
-      <a style="position: absolute;bottom: 8em; right: 1em;" class="btn btn-primary btn-md" href="#" role="button">Learn more</a>
+    <p class="lead call-to-action">
+      <a style="" class="btn btn-primary btn-md" href="#" role="button">Learn more</a>
     </p>
   </div>
 </div>
