mobile fixes, starting animation fades.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,14 @@
 <app-header></app-header>
 
-<div class="row">
-  <app-right-navigation class="col-md-3"></app-right-navigation>
-  <app-view class="col-md-9">
-    <p>App View Here</p>
-    <router-outlet></router-outlet>
-  </app-view>
+<div class="container">
+  <div class="row">
+    <app-right-navigation class="col-md-3"></app-right-navigation>
+    <app-view class="col-md-9">
+      <p>App View Here</p>
+      <router-outlet></router-outlet>
+    </app-view>
+  </div>
 </div>
+
 <app-footer></app-footer>
 
