--- a/src/app/views/gallery/gallery.component.html
+++ b/src/app/views/gallery/gallery.component.html
@@ -2,14 +2,14 @@
   <h1 style="margin-top: -1em;" class="display-3">BS Native Girl</h1>
   <div class="float-right">
 
-    <p style="" class="lead">My collection of artwork is broken into catagories.  Here is a jumbotron of the featured images.</p>
+    <p class="lead">My collection of artwork is broken into catagories.  Here is a jumbotron of the featured images.</p>
     <p class="lead call-to-action">
-      <a style="" class="btn btn-primary btn-md" href="#" role="button">Learn more</a>
+      <a class="btn btn-primary btn-md" href="#" role="button">Learn more</a>
     </p>
   </div>
 </div>
 
-<div style="margin-bottom: -10em;" class="row gallery-catagories">
+<div class="row gallery-catagories">
     <div class="gallery-catagory col-lg-4 col-md-4 col-sm-4 col-xs-6 filter hdpe">
         <img src="assets/images/one.jpg" class="img-responsive">
         Drums
