--- a/src/app/views/landing/landing.component.html
+++ b/src/app/views/landing/landing.component.html
@@ -1,3 +1,14 @@
-<p>
-  landing works!
-</p>
+<div class="jumbotron float-right" style="height: 32em;color: black; z-index:1;">
+  <div class="float-right">
+    <div class="row">
+      <div class="col-md-9">
+        <p class="lead">Welcome to my webpage where I have placed some selections of my artwork.  We will be adding to this collection and branching out into other product lines.  Be sure to sign up for the mailing list to stay informed about events, new designs and products!</p>
+        <p class="lead call-to-action">
+          <a id="subscribe-maillist" class="btn btn-primary btn-md float-center" href="#" role="button">Sign Up</a>
+        </p>
+      </div>
+      <div class="col-md-3">
+        <img style="" src="../../../assets/images/eagle-transparency-background.png">
+      </div>
+  </div>
+</div>
