--- a/src/app/views/landing/landing.component.html
+++ b/src/app/views/landing/landing.component.html
@@ -2,8 +2,8 @@
   <div class="float-right">
     <div class="row">
       <div class="col-md-9">
-        <p class="lead">Welcome to my webpage where I have placed some selections of my artwork.  We will be adding to this collection and branching out into other product lines.  Be sure to sign up for the mailing list to stay informed about events, new designs and products!</p>
-        <p class="lead call-to-action">
+        <p class="lead on-top">Welcome to my webpage where I have placed some selections of my artwork.  We will be adding to this collection and branching out into other product lines.  Be sure to sign up for the mailing list to stay informed about events, new designs and products!</p>
+        <p class="lead call-to-action on-top">
           <a id="subscribe-maillist" class="btn btn-primary btn-md float-center" href="#" role="button">Sign Up</a>
         </p>
       </div>
